# publish_subscribe

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: Conan.cmake  StandardProjectSettings.cmake
container/: Dockerfile.compile  README  docker-compose.yml  go
doc/: README.md  legacy_class.uml  legacy_sequence.uml  legacy_sequence_case_study.uml  plantuml  subscription_class.uml  subscription_sequence.uml  weak_class.uml  weak_sequence.uml
measure/: README.md  compile  go
src/: CMakeLists.txt  cadr.cpp  cadr.hpp  legacy.cpp  legacy.hpp  limits.hpp  main.cpp  subscription.cpp  subscription.hpp  weak.cpp  weak.hpp
stats/: 201_50_counters.txt  202_50_counters.txt  203_50_counters.txt  204_50_counters.txt  205_50_counters.txt  206_50_counters.txt  207_50_counters.txt  208_50_counters.txt  209_50_counters.txt  210_50_counters.txt  211_50_counters.txt  212_50_counters.txt  213_50_counters.txt  214_50_counters.txt  215_50_counters.txt  216_50_counters.txt  217_50_counters.txt  218_50_counters.txt  219_50_counters.txt  220_50_counters.txt  221_50_counters.txt  222_50_counters.txt  223_50_counters.txt  224_50_counters.txt  225_50_counters.txt  226_50_counters.txt  227_50_counters.txt  228_50_counters.txt  229_50_counters.txt  230_50_counters.txt  231_50_counters.txt  232_50_counters.txt  233_50_counters.txt  234_50_counters.txt  235_50_counters.txt  236_50_counters.txt  237_50_counters.txt  238_50_counters.txt  239_50_counters.txt  240_50_counters.txt  (+269 more)
stats/1000_counters/: README.md  stats.1.txt  stats.3.txt  stats.5.txt
test/: CMakeLists.txt  tests.cpp
